--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
+    "@types/lodash": "^4.17.7",
     "@types/mongoose": "^5.11.96",
     "mongoose": "^8.6.3",
     "nodemon": "^3.1.7",
